unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/ETT_Fleet_Analysis_Request__c.object-meta.xml
<CustomObject>
    <label>Fleet Analysis Request</label>
    <nameField>
        <displayFormat>FAR-{0000}</displayFormat>
        <label>Fleet Analysis Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fleet Analysis Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>