unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/fields/Approval_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Check__c</fullName>
    <label>Approval Status Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>