unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/fields/ETT_Inspector__c.field-meta.xml
<CustomField>
    <fullName>ETT_Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fleet_Analysis_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>