unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/fields/Inspection_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Cancellation_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspection Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>