unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/fields/Inspection_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Inspection_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspection DateTime</label>
    <type>DateTime</type>
</CustomField>