unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/fields/Inspection_Location__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspection Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>