unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/fields/Inspector_Status__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Status__c</fullName>
    <label>Inspector Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>