unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/validationRules/Contact_Person.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Person</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Contact_Person__c ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorMessage>Please Enter Only  alphabets</errorMessage>
</ValidationRule>