unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/validationRules/Date_Must_Be_Greater_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Must_Be_Greater_Than_Today</fullName>
    <active>true</active>
    <errorConditionFormula>Inspection_DateTime__c  &lt;=  NOW()</errorConditionFormula>
    <errorMessage>Please select today or future Date</errorMessage>
</ValidationRule>