unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/validationRules/Inspector_Required_by_HOO.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspector_Required_by_HOO</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $Profile.Name ==&quot;ETT_Head of Operations&quot;,   IF( ISBLANK( ETT_Inspector__c) , true , false) , false)</errorConditionFormula>
    <errorMessage>Please provide Inspector to Fleet Analysis Request</errorMessage>
</ValidationRule>