unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/validationRules/Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK(Phone__c)),
NOT(REGEX(Phone__c, &quot;(\\D?[+]\\D?[9]\\D?[7]\\D?[1])\\s?[0-9]{8,9}&quot;)),FALSE)</errorConditionFormula>
    <errorMessage>Phone numbers should be in this format (+971 XXXXXXXXX)</errorMessage>
</ValidationRule>