unpackaged/main/default/objects/ETT_Fleet_Analysis_Request__c/validationRules/Reason_should_be_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_should_be_mandatory</fullName>
    <active>true</active>
    <description>when inspector status is cancelled then rejectiob reason should be mandatory</description>
    <errorConditionFormula>IF( ISCHANGED( Inspector_Status__c ) , IF( ISPICKVAL( Inspector_Status__c , &quot;Cancelled&quot;) ,  IF( ISBLANK( Inspection_Cancellation_Reason__c ) , true, false) , false)  , false)</errorConditionFormula>
    <errorMessage>Please provide cancellation reason</errorMessage>
</ValidationRule>